prevent squishing name, hidable thumbnails

--- a/frontend/components/installed-games/installed-games.module.css
+++ b/frontend/components/installed-games/installed-games.module.css
@@ -1,3 +1,8 @@
 .fileDropZone {
 	height: 15em;
 }
+
+.gameName {
+	gap: var(--mantine-spacing-xs);
+	flex-wrap: wrap;
+}
